[gd_scene load_steps=2 format=3 uid="uid://dlygww2vfvey6"]

[ext_resource type="Script" path="res://Scripts/endgame.gd" id="1_x5jfy"]

[node name="Endgame" type="Node2D"]
script = ExtResource("1_x5jfy")

[node name="Label" type="Label" parent="."]
offset_top = 32.0
offset_right = 16.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 12
text = "1."

[node name="Label2" type="Label" parent="."]
offset_top = 48.0
offset_right = 16.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 12
text = "2."

[node name="Label3" type="Label" parent="."]
offset_top = 64.0
offset_right = 16.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 12
text = "3."

[node name="Label4" type="Label" parent="."]
offset_top = 80.0
offset_right = 16.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 12
text = "4."

[node name="Label5" type="Label" parent="."]
offset_top = 96.0
offset_right = 16.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 12
text = "5."

[node name="Player1" type="Label" parent="."]
offset_left = 16.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 12
text = "Player 1"

[node name="Player2" type="Label" parent="."]
offset_left = 16.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 12
text = "Player 2"

[node name="Player3" type="Label" parent="."]
offset_left = 16.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 12
text = "Player 3"

[node name="Player4" type="Label" parent="."]
offset_left = 16.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 12
text = "Player 4"

[node name="Player5" type="Label" parent="."]
offset_left = 16.0
offset_top = 96.0
offset_right = 64.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 12
text = "Player 5"

[node name="Points1" type="Label" parent="."]
offset_left = 64.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 12
text = "1"

[node name="Points2" type="Label" parent="."]
offset_left = 64.0
offset_top = 48.0
offset_right = 80.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 12
text = "2"

[node name="Points3" type="Label" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 80.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 12
text = "3"

[node name="Points4" type="Label" parent="."]
offset_left = 64.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 12
text = "4"

[node name="Points5" type="Label" parent="."]
offset_left = 64.0
offset_top = 96.0
offset_right = 80.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 12
text = "5"

[node name="Button" type="Button" parent="."]
offset_top = 128.0
offset_right = 91.0
offset_bottom = 159.0
text = "RESTART"

[connection signal="pressed" from="Button" to="." method="restart_game"]
